[package]
name = "tado-exporter"
version = "0.1.0"
authors = ["Vincent Composieux <vincent@composieux.fr>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.28", features = ["server", "runtime", "http1", "http2"] }
tokio = { version = "1.41.1", features = ["full"] }
lazy_static = "1.5.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_derive = "1.0.123"
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.5"
openssl = { version = "0.10.68", features = ["vendored"] }

[dev-dependencies]
actix-rt = "2.10.0"
rstest = "0.17.0"
wiremock = "0.6.2"
