[package]
name = "tado-exporter"
version = "0.1.0"
authors = ["Vincent Composieux <vincent@composieux.fr>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.28", features = ["server", "runtime", "http1", "http2"] }
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = "1.5.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_derive = "1.0.123"
serde_json = "1.0.137"
log = "0.4.25"
env_logger = "0.11.6"
openssl = { version = "0.10.69", features = ["vendored"] }

[dev-dependencies]
actix-rt = "2.10.0"
rstest = "0.17.0"
wiremock = "0.6.2"
